<resources>
    <string name="app_name">Museos</string>
    <string name="tv_buscador">Buscador de museos de la Comunidad de Madrid</string>
    <string name="btn_filtrar">seleccionar filtro</string>
    <string name="btn_consultar">consultar listado</string>
    <string name="mn_listado">Listado</string>
    <string name="mn_mapa">Mapa</string>
    <string name="dialog_titulo">Seleccionar Filtro</string>
    <string name="btnAceptar">Aceptar</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="no_internet">No hay conexión a Internet</string>
    <string name="btn_consultar_mapa">Consultar Mapa</string>
    <string name="no_museos">No hay museos para ese distrito</string>
    <string name="tv_distrito">Distrito:</string>
    <string name="tv_area">Área:</string>
    <string name="tv_direccion">Dirección:</string>
    <string name="tv_descripcion">Descripción:</string>
    <string name="tv_horario">Horario:</string>
</resources>